--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--copy
 -->
 <head>
-	<title>Example</title>
+	<title>Example2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content hi
+			Just some content hihello
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company sufyan</p>
 	</footer>
 </body>
 </html>
