--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 before rebase
 -->
 <head>
-	<title>Example</title>
+	<title>Example edfd</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ before rebase
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content hihello
+			Just some rkhjdfcontent hihello
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Companyhello</p>
+		<p>&copy; Companyfrjndfjkhhello</p>
 	</footer>
 </body>
 </html>
