before rebase master

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!--copy
 before rebase
+testing rebase
 -->
 <head>
-	<title>Example edfd</title>
+	<title>Example edfd djkbkjdfb</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
