--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ before rebase
 testing rebase
 -->
 <head>
-	<title>Example edfd</title>
+	<title>Example edfd hello</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
