--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@ testing rebase
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Companyfrjndfjkhhello</p>
+		<p>&copy; hello</p>
 	</footer>
 </body>
 </html>
